finished authentication methods for Cloud

--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -1,13 +1,14 @@
-﻿<UserControl x:Class="LanguageWeaverProvider.View.Cloud.CloudMainView"
+﻿<UserControl x:Class="LanguageWeaverProvider.View.Cloud.CloudCredentialsView"
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+			 xmlns:root="clr-namespace:LanguageWeaverProvider"
 			 xmlns:controls="clr-namespace:LanguageWeaverProvider.Controls"
 			 xmlns:local="clr-namespace:LanguageWeaverProvider.View.Cloud"
 			 xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
 			 xmlns:viewModel="clr-namespace:LanguageWeaverProvider.ViewModel.Cloud"
-			 d:DataContext="{d:DesignInstance viewModel:CloudMainViewModel}"
+			 d:DataContext="{d:DesignInstance viewModel:CloudCredentialsViewModel}"
 			 mc:Ignorable="d">
 	<UserControl.Resources>
 		<ResourceDictionary>
@@ -49,14 +50,14 @@
 			<Button Content="User credentials"
 					Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Command="{Binding SelectAuthenticationTypeCommand}"
-					CommandParameter="Credentials"
+					CommandParameter="{x:Static root:AuthenticationType.Credentials}"
 					Cursor="Hand"
 					Width="188"
 					Margin="0 8" />
 			<Button Content="User secret"
 					Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Command="{Binding SelectAuthenticationTypeCommand}"
-					CommandParameter="Secret"
+					CommandParameter="{x:Static root:AuthenticationType.Secret}"
 					Cursor="Hand"
 					Width="188"
 					Margin="0 8" />
