Fix issue: an item with the same key has already been added to the collection (ListBox)

--- a/InterpretBank/InterpretBank/TermbaseViewer/UI/TermbaseViewer.xaml
+++ b/InterpretBank/InterpretBank/TermbaseViewer/UI/TermbaseViewer.xaml
@@ -64,7 +64,7 @@
 					 Margin="0"
 					 BorderThickness="0"
 					 ItemsSource="{Binding Terms}"
-					 SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
+					 SelectedIndex="{Binding SelectedIndex}">
 				<ListBox.ItemTemplate>
 					<DataTemplate DataType="{x:Type model:TermModel}">
 
