--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -5,7 +5,6 @@
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 			 xmlns:root="clr-namespace:LanguageWeaverProvider"
 			 xmlns:controls="clr-namespace:LanguageWeaverProvider.Controls"
-			 xmlns:local="clr-namespace:LanguageWeaverProvider.View.Cloud"
 			 xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
 			 xmlns:viewModel="clr-namespace:LanguageWeaverProvider.ViewModel.Cloud"
 			 d:DataContext="{d:DesignInstance viewModel:CloudCredentialsViewModel}"
@@ -13,12 +12,12 @@
 	<UserControl.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
-				<ResourceDictionary Source="../../Style/GroupBox.xaml" />
-				<ResourceDictionary Source="../../Style/WindowsBorder.xaml" />
-				<ResourceDictionary Source="../../Controls/WatermarkTextBoxResources.xaml" />
-				<ResourceDictionary Source="../../Controls/WatermarkPasswordBoxResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ButtonResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBlockResources.xaml" />
+				<ResourceDictionary Source="pack://application:,,,/LanguageWeaverProvider;component/Style/GroupBox.xaml" />
+				<ResourceDictionary Source="pack://application:,,,/LanguageWeaverProvider;component/Style/WindowsBorder.xaml" />
+				<ResourceDictionary Source="pack://application:,,,/LanguageWeaverProvider;component/Controls/WatermarkTextBoxResources.xaml" />
+				<ResourceDictionary Source="pack://application:,,,/LanguageWeaverProvider;component/Controls/WatermarkPasswordBoxResources.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 
 			<converters:InvertableBooleanToVisibilityConverter x:Key="InvertableBooleanToVisibilityConverter" />
@@ -50,14 +49,14 @@
 			<Button Content="User credentials"
 					Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Command="{Binding SelectAuthenticationTypeCommand}"
-					CommandParameter="{x:Static root:AuthenticationType.Credentials}"
+					CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
 					Cursor="Hand"
 					Width="188"
 					Margin="0 8" />
 			<Button Content="User secret"
 					Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Command="{Binding SelectAuthenticationTypeCommand}"
-					CommandParameter="{x:Static root:AuthenticationType.Secret}"
+					CommandParameter="{x:Static root:AuthenticationType.CloudSecret}"
 					Cursor="Hand"
 					Width="188"
 					Margin="0 8" />
